Add support for cursor runtime in install script and enhance codebase mapping features
- Introduced `--cursor` flag for runtime selection in `install.js`, allowing installation for the Cursor runtime.
- Updated `selectedRuntimes` to include 'cursor' when the `--all` or `--both` flags are used.
- Enhanced configuration handling in `blueprint-tools.js` to include `codebase_mapping` metadata for tracking last mapped commit and produced documents.
- Implemented `codebase-staleness-check` command to assess the freshness of codebase mappings, providing user feedback on potential staleness.
- Updated workflows to incorporate new mapping metadata and staleness checks, ensuring accurate project state management.
- Added tests for new functionality, ensuring robust coverage for codebase mapping and state compacting processes.

--- a/blueprint/templates/config.json
+++ b/blueprint/templates/config.json
@@ -31,5 +31,11 @@
   "safety": {
     "always_confirm_destructive": true,
     "always_confirm_external_services": true
-  }
+  },
+  "codebase_mapping": {
+    "last_mapped_at": null,
+    "last_mapped_commit": null,
+    "docs_produced": []
+  },
+  "agent_models": {}
 }
